--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,6 +12,9 @@ server {
         alias /app/media/;
     }
 
+    # Fayl yuklash hajmini oshirish
+    client_max_body_size 20M;  # 20MB gacha ruxsat berish, kerak bo'lsa o'zgartirish mumkin
+
     # API so‘rovlarini DRF’ga yo‘naltirish
     location / {
         proxy_pass http://app:8002;
